# menu

commands/: run_fe.sh  run_server.sh
docs/: 01-产品概述.md  02-功能需求.md  03-系统架构.md  04-数据库设计.md  05-API设计.md  06-核心流程.md  07-前端设计.md  08-开发计划.md  next_step_0503.md
frontend/menu_fe/: README.md  pubspec.yaml
frontend/menu_fe/android/app/: build.gradle.kts
frontend/menu_fe/ios/Runner/: Info.plist
frontend/menu_fe/ios/Runner.xcodeproj/: project.pbxproj
frontend/menu_fe/lib/: main.dart
frontend/menu_fe/lib/config/: api_config.dart
frontend/menu_fe/linux/: CMakeLists.txt
frontend/menu_fe/test/: widget_test.dart
frontend/menu_fe/web/: index.html  manifest.json
frontend/menu_fe/windows/: CMakeLists.txt
server/: alembic.ini  config-public.yaml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 22c932291b81_create_dish_templates.py  5fc28bee67ed_add_shopping_lists_table.py  c131ca8dafdf_add_menus_and_menu_meals_tables.py
server/app/: config.py  database.py  main.py
server/app/model/: __init__.py  dish_template.py  menus.py  shopping_list.py
server/app/repository/: dish_template_repo.py  menu_repo.py  shopping_repo.py
server/app/router/: dishes.py  health.py  menus.py  nutrition.py  shopping.py
server/app/schema/: common.py  dish.py  menu.py  nutrition.py  shopping.py
server/app/service/: dish_service.py  menu_service.py  nutrition_service.py  shopping_service.py
server/app/util/: prompt.py
server/resource/prompt/: add_dish.md  classify_ingredients.md  generate_ingredients.md
server/sql/: seed_dish_templates.sql
(+23 files in other folders)
